--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "my-project",
+  "name": "reena-saini-portfolio",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build && next export",
+    "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "deploy": "gh-pages -d out"
+    "deploy": "next build && next export && gh-pages -d out"
   },
   "dependencies": {
     "@react-three/drei": "^9.113.0",
